--- a/src/app/pages/auth/signup/signup.html
+++ b/src/app/pages/auth/signup/signup.html
@@ -121,3 +121,8 @@
     </div>
   </div>
 </div>
+
+<div [class]="`absolute left-4 bottom-4 flex flex-row items-center ${loading ? '' : 'hidden'}`">
+  <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">
+  Signing Up...
+</div>
