--- a/src/app/pages/home/contact/contact.html
+++ b/src/app/pages/home/contact/contact.html
@@ -27,13 +27,13 @@
           <h3 class="mb-4 text-xl font-medium text-[#EAAA08]">Quick Links</h3>
           <ul class="space-y-3 text-base text-gray-300">
             <li>
-              <a href="#" class="hover:text-white">Home</a>
+              <a (click)="onHomeClick()" class="hover:text-white cursor-pointer">Home</a>
             </li>
             <li>
-              <a href="#" class="hover:text-white">Features</a>
+              <a (click)="onFeaturesClick()" class="hover:text-white cursor-pointer">Features</a>
             </li>
             <li>
-              <a href="#" class="hover:text-white">Pricing</a>
+              <a (click)="onPricingClick()" class="hover:text-white cursor-pointer">Pricing</a>
             </li>
           </ul>
         </div>
@@ -43,7 +43,7 @@
             Contact Information
           </h3>
           <p class="flex items-center space-x-2 text-base text-gray-300">
-            <img src="images/EnvelopeSimple.png" />
+            <img src="images/EnvelopeSimple.svg" />
             <span>maestroaidevs@gmail.com</span>
           </p>
         </div>
@@ -62,14 +62,14 @@
       </p>
       <!-- sm icons-->
       <div class="flex space-x-4">
-        <a href="#" target="_blank">
-          <img src="images/linkedin.png" alt="linkedin icon" />
+        <a href="https://www.linkedin.com/" target="_blank">
+          <img src="images/linkedin.svg" alt="linkedin icon" />
         </a>
-        <a href="#" target="_blank">
-          <img src="images/facebook.png" alt="facebook icon" />
+        <a href="https://www.facebook.com/" target="_blank">
+          <img src="images/facebook.svg" alt="facebook icon" />
         </a>
-        <a href="#" target="_blank">
-          <img src="images/insta.png" alt="instagram icon" />
+        <a href="https://www.instagram.com/" target="_blank">
+          <img src="images/instagram.svg" alt="instagram icon" />
         </a>
       </div>
     </div>
