--- a/src/app/pages/home/features/features.html
+++ b/src/app/pages/home/features/features.html
@@ -22,7 +22,7 @@
         <div
           class="flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]"
         >
-          <img src="images/material_comprehension.png" />
+          <img src="images/material_comprehension.svg" />
         </div>
         <div>
           <!-- Feature heading-->
@@ -41,7 +41,7 @@
         <div
           class="flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]"
         >
-          <img src="images/learning_paths.png" />
+          <img src="images/learning_paths.svg" />
         </div>
         <div>
           <h3 class="text-xl font-medium text-[#264653]">
@@ -58,7 +58,7 @@
         <div
           class="flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]"
         >
-          <img src="images/summaries.png" />
+          <img src="images/summaries.svg" />
         </div>
         <div>
           <h3 class="text-xl font-medium text-[#264653]">
@@ -75,7 +75,7 @@
         <div
           class="flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-lg bg-[#264653]"
         >
-          <img src="images/exam.png" />
+          <img src="images/exam.svg" />
         </div>
         <div>
           <h3 class="text-xl font-medium text-[#264653]">
