--- a/src/app/pages/home/landing/landing.html
+++ b/src/app/pages/home/landing/landing.html
@@ -25,10 +25,10 @@
       <nav
         class="hidden md:flex items-center space-x-6 text-xl sm:space-x-10 text-white"
       >
-        <a (click)="onHomeClick()" class="font-medium hover:text-prussian-blue-500">Home</a>
-        <a (click)="onFeaturesClick()" class="font-medium hover:text-prussian-blue-500">Features</a>
-        <a (click)="onPricingClick()" class="font-medium hover:text-prussian-blue-500">Pricing</a>
-        <a (click)="onContactClick()" class="font-medium hover:text-prussian-blue-500">Contact us</a>
+        <a (click)="onHomeClick()" class="font-medium hover:text-prussian-blue-500 cursor-pointer">Home</a>
+        <a (click)="onFeaturesClick()" class="font-medium hover:text-prussian-blue-500 cursor-pointer">Features</a>
+        <a (click)="onPricingClick()" class="font-medium hover:text-prussian-blue-500 cursor-pointer">Pricing</a>
+        <a (click)="onContactClick()" class="font-medium hover:text-prussian-blue-500 cursor-pointer">Contact us</a>
       </nav>
 
       <button
