--- a/src/app/pages/home/pricing/pricing.html
+++ b/src/app/pages/home/pricing/pricing.html
@@ -14,11 +14,11 @@
 
   <!-- Pricing Tiers-->
   <div
-    class="mx-auto mt-16 flex w-full flex-col items-center justify-center space-y-12 md:flex-row md:items-start md:space-x-8 md:space-y-0 lg:max-w-screen-lg"
+    class="mx-auto mt-16 flex w-full flex-col justify-center space-y-12 md:flex-row md:items-start md:space-x-8 md:space-y-0 lg:max-w-screen-lg"
   >
-    <!-- Starter Tier-->
+    <!-- Basic Tier-->
     <div
-      class="flex h-full flex-1 flex-col items-start rounded-[32px] border border-[#BFBFBF] bg-white p-8 px-6 text-center shadow-lg md:mt-24"
+      class="self-end flex h-full flex-1 flex-col items-start rounded-[32px] border border-[#BFBFBF] bg-white p-8 px-6 text-center shadow-lg md:mt-24"
     >
       <h3 class="text-2xl font-semibold text-[#264653]">Basic</h3>
       <div class="mt-2 text-4xl font-bold text-[#264653]">
@@ -41,24 +41,24 @@
         <h4 class="font-medium text-[#264653]">Features</h4>
         <ul class="mt-4 space-y-4 text-left text-gray-600">
           <li class="flex items-center space-x-2">
-            <img src="images/Check.png" />
+            <img src="images/check.svg" />
             <p>Create 2 personalized lessons each month</p>
           </li>
           <li class="flex items-center space-x-2">
-            <img src="images/Check.png" />
+            <img src="images/check.svg" />
             <p>Keep up to 5 lessons saved in your library</p>
           </li>
           <li class="flex items-center space-x-2">
-            <img src="images/Check.png" />
+            <img src="images/check.svg" />
             <p>Upload files up to 3MB each</p>
           </li>
         </ul>
       </div>
     </div>
 
-    <!-- Pro Tier-->
+    <!-- Standard Tier-->
     <div
-      class="relative flex h-full flex-1 flex-col items-start rounded-[34px] border border-[#BFBFBF] bg-[#262626] p-[34px] px-[26px] text-center text-white shadow-xl"
+      class="self-center relative flex h-full flex-1 flex-col items-start rounded-[34px] border border-[#BFBFBF] bg-[#262626] p-[34px] px-[26px] text-center text-white shadow-xl"
     >
       <!-- Popular badge-->
       <div class="popular-tag">
@@ -87,15 +87,15 @@
         <h4 class="font-medium">Features</h4>
         <ul class="mt-4 space-y-4 text-left text-gray-400">
           <li class="flex items-center space-x-2">
-            <img src="images/whitecheck.png" />
+            <img src="images/whitecheck.svg" />
             <p>Unlock 8 lessons every month</p>
           </li>
           <li class="flex items-center space-x-2">
-            <img src="images/whitecheck.png" />
+            <img src="images/whitecheck.svg" />
             <p>Store up to 20 lessons for easy access</p>
           </li>
           <li class="flex items-center space-x-2">
-            <img src="images/whitecheck.png" />
+            <img src="images/whitecheck.svg" />
             <p>Upload documents up to 10MB</p>
           </li>
         </ul>
@@ -104,7 +104,7 @@
 
     <!-- Premium Tier-->
     <div
-      class="flex h-full flex-1 flex-col items-start rounded-[36px] border border-[#BFBFBF] bg-white p-9 px-7 text-center shadow-lg md:mt-24"
+      class="self-start flex h-full flex-1 flex-col items-start rounded-[36px] border border-[#BFBFBF] bg-white p-9 px-7 text-center shadow-lg md:mt-24"
     >
       <h3 class="text-2xl font-semibold text-[#264653]">Premium</h3>
       <div class="mt-2 text-4xl font-bold text-[#264653]">
@@ -126,15 +126,15 @@
         <h4 class="font-medium text-[#264653]">Features</h4>
         <ul class="mt-4 space-y-4 text-left text-gray-600">
           <li class="flex items-center space-x-2">
-            <img src="images/Check.png" />
+            <img src="images/check.svg" />
             <p>Generate up to 25 lessons per month</p>
           </li>
           <li class="flex items-center space-x-2">
-            <img src="images/Check.png" />
+            <img src="images/check.svg" />
             <p>Save 100 lessons in your personal library</p>
           </li>
           <li class="flex items-center space-x-2">
-            <img src="images/Check.png" />
+            <img src="images/check.svg" />
             <p>Upload files as large as 20MB</p>
           </li>
         </ul>
