--- a/src/app/pages/auth/check-email/check-email.html
+++ b/src/app/pages/auth/check-email/check-email.html
@@ -12,7 +12,7 @@
       </div>
       <button 
         class="text-left font-bold text-prussian-blue-900 disabled:text-prussian-blue-500 hover:text-prussian-blue-500"
-        [disabled]="resendTimer > 0"
+        [disabled]="(resendTimer > 0) || (loading)"
         (click)="resendVerificationEmail()"
       >
         Resend mail in {{resendTimer}} seconds
@@ -27,4 +27,9 @@
       <span class="font-serif text-3xl h-max text-white">Maestro</span>
     </div>
   </div>
+</div>
+
+<div [class]="`absolute left-4 bottom-4 flex flex-row items-center ${loading ? '' : 'hidden'}`">
+  <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">
+  Resending Email...
 </div>
