--- a/src/app/pages/home/home/home.html
+++ b/src/app/pages/home/home/home.html
@@ -2,5 +2,5 @@
   <app-landing (navigateSection)="scrollTo($event)" id="top"></app-landing>
   <app-features id="features"></app-features>
   <app-pricing id="pricing"></app-pricing>
-  <app-contact id="contact"></app-contact>
+  <app-contact (navigateSection)="scrollTo($event)" id="contact"></app-contact>
 </div>
