--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -88,7 +88,7 @@
       </div>
     }
 
-    <div>
+    <div class="flex flex-row items-center">
       <button 
         type="submit" 
         class="w-max bg-prussian-blue-800 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 text-white flex flex-row items-center px-5 py-3 rounded-md text-sm" 
