--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -32,6 +32,7 @@
       required
       subjectName
       #nameCtrl="ngModel"
+      [disabled]="!(subject.status == 'pending naming')"
     />
     <!-- Error messages -->
     @if (nameCtrl.invalid && nameCtrl.touched) {
@@ -95,8 +96,8 @@
         (click)="onSubmit()"
         [disabled]="loading"
       >
-        Create New Subject
-        <img src="images/create-subject-icon.svg" alt="" class="w-4 ml-3">
+        Next
+        <img src="images/next-icon.svg" alt="" class="w-3 ml-2">
       </button>
       <div [class]="`flex flex-row items-center ${loading ? '' : 'hidden'}`">
         <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">
